--- a/src/main/resources/templates/layout/l_main.html
+++ b/src/main/resources/templates/layout/l_main.html
@@ -23,7 +23,15 @@
   <link th:href="@{/vendors/css/bootstrap-icons.css}" rel="stylesheet">
 
   <link th:href="@{/vendors/css/magnific-popup.css}" rel="stylesheet">
+  <link th:href="@{/vendors/css/swiper-bundle.min.css}" rel="stylesheet">
+
   <link th:href="@{/vendors/css/templatemo-first-portfolio-style.css}" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css"
+        integrity="sha512-xX2rYBFJSj86W54Fyv1de80DWBq7zYLn2z0I9bIhQG+rxIF6XVJUpdGnsNHWRa6AvP89vtFupEPDP8eZAtu9qA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js">
+  </script>
 </head>
 
 <body>
@@ -41,7 +49,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a href="index.html" class="navbar-brand mx-auto mx-lg-0">JobRemote</a>
+    <a href="index.html" class="navbar-brand mx-auto mx-lg-0">MRemote</a>
 
     <div class="d-flex align-items-center d-lg-none">
       <i class="navbar-icon bi-telephone-plus me-3"></i>
@@ -61,11 +69,11 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link click-scroll" href="#section_3">Hoạt động nổi bật</a>
+          <a class="nav-link click-scroll" href="/moi-nguoi">Hoạt động nổi bật</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link click-scroll" href="/quan-ly-cong-viec/tao-cong-viec">Tạo công việc</a>
+          <a class="nav-link click-scroll" href="/moi-nguoi/cac-khoa-da-tham-gia">Khoá của tôi</a>
         </li>
 
         <li class="nav-item">
@@ -96,9 +104,9 @@
       <div class="col-lg-12 col-12">
         <div class="copyright-text-wrap">
           <p class="mb-0">
-            <span class="copyright-text">Copyright © 2036 <a href="#">First Portfolio</a> Company. All rights reserved.</span>
+            <span class="copyright-text">Copyright © 2022 <a href="#">Mremote</a> VKU</span>
             Design:
-            <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a>
+            <a rel="sponsored" href="https://templatemo.com" target="_blank">HaiDuong</a>
           </p>
         </div>
       </div>
